--- a/style/style.css
+++ b/style/style.css
@@ -24,3 +24,27 @@ body
 {
     font-size: 2rem;
 }
+.contenedor
+{
+    width: 120rem;
+   /*
+    margin-top: 0;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-left: auto;
+    esta parte de codigo nos la ahorraremos poniendo la propiedad margin
+    */
+    margin: 0 auto;
+}
+.nav-bg
+{
+    background-color: var(--secundario);
+}
+.navegacion-principal a
+{
+ background-color: var(--primario);
+}/*
+p
+{
+    
+} */
