--- a/style/style.css
+++ b/style/style.css
@@ -105,6 +105,13 @@ h1,h2,h3
 {
 color: var(--blanco);
 }
+.ubicacion
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 @media (min-width: 480px/*esdta resolucion sirve para un telefono celular*/)  
 {
     .navegacion-principal
