--- a/style/style.css
+++ b/style/style.css
@@ -50,6 +50,31 @@ h1,h2,h3
     */
     margin: 0 auto;
 }
+.button
+{
+    background-color: var(--secundario);
+    color: var(--blanco);
+    padding: 1rem 3rem;
+    margin-top: 1rem;
+    font-size: 2rem;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 5rem;
+    width: 90%;
+    text-align: center;
+}
+@media(min-width:768px) {
+    .button{
+        width: auto;
+    }
+    
+}
+.sombra{
+  
+    box-shadow: 10px 5px 15px 0px rgba(112,112,112,0.54);
+    background-color: var(--blanco);
+    padding: 2rem;
+}
 .nav-bg
 {
     background-color: var(--secundario);
@@ -83,8 +108,9 @@ h1,h2,h3
     background-repeat: no-repeat;
     background-size: cover;
     height: 450px;
-   
+   margin-bottom: 2rem;
     position: relative;
+    border-radius: 2rem;
 }
 .contenido-hero
 {
@@ -134,6 +160,7 @@ color: var(--blanco);
   
 }
 }
+
 /*
 esta parte sirve para hacer responsivos los sitios web
 */
