--- a/style/style.css
+++ b/style/style.css
@@ -131,7 +131,7 @@ h1,h2,h3
 {
 color: var(--blanco);
 }
-.ubicacion
+.contenido-hero .ubicacion
 {
     display: flex;
     flex-direction: column;
