--- a/style/style.css
+++ b/style/style.css
@@ -63,6 +63,9 @@ h1,h2,h3
     width: 90%;
     text-align: center;
 }
+.button:hover{
+   cursor: pointer; 
+}
 @media(min-width:480px) {
     .button{
         width: auto;
@@ -191,6 +194,46 @@ color: var(--blanco);
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.formulario{
+    background-color: var(--gris);
+    width: min( 60 rem, 100%); /*Utilizar el valor mas pequeño*/
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem;
+}
+.formulario fieldset{
+    border:none;
+}
+.formulario legend
+{
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: var(--primario);
+}
+.contenedor campos{}
+.campo{
+    margin-bottom: 1rem;
+}
+.campo label{
+    color: var(--blanco);
+    font-weight: bold;
+    margin-bottom: 5rem;
+    display:block;
+}
+.campo input [type="tel"],
+[type="email"],
+[type="text"]
+{
+    background-color: red;
+    
+}
+.button:hover{
+    cursor: pointer;
+   
 }
 /*
 esta parte sirve para hacer responsivos los sitios web
