--- a/style/style.css
+++ b/style/style.css
@@ -62,6 +62,7 @@ h1,h2,h3
     border-radius: 5rem;
     width: 90%;
     text-align: center;
+    border:none;
 }
 .button:hover{
    cursor: pointer; 
@@ -214,22 +215,28 @@ color: var(--blanco);
     margin-bottom: 2rem;
     color: var(--primario);
 }
-.contenedor campos{}
+.contenedor-campos{}
 .campo{
     margin-bottom: 1rem;
 }
 .campo label{
     color: var(--blanco);
     font-weight: bold;
-    margin-bottom: 5rem;
+    margin-bottom: .5rem;
     display:block;
 }
-.campo input [type="tel"],
+.campo input[type="text"],
 [type="email"],
-[type="text"]
+[type="tel"]
 {
     background-color: red;
     
+}
+.input-text{
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: .5rem;
 }
 .button:hover{
     cursor: pointer;
